# i-dream

./: .gitignore  Cargo.toml  LICENSE.md  README.md  USAGE.md  _20260412-resume-tasks-8a.claude.md  _20260414-check-logs-2e.claude.md  _20260414-chng-pipe-a4.claude.md  _20260415-core-dump-8c.claude.md  _20260415-dash-fix-a3.claude.md  _20260415-fix-hook-9c.claude.md  _20260415-mbar-fix-c3.claude.md  _20260416-log-audt-c3.claude.md  _precompact-checkpoint.claude.md
docs/: 01-research-human-subconsciousness.md  02-research-ai-metacognition.md  03-implementation-details.md  04-architecture-diagram.md  05-how-to.md  v2-dashboard-plan.md
src/: api.rs  cli.rs  config.rs  daemon.rs  dashboard.rs  dream_trace.rs  events.rs  hooks.rs  logging.rs  main.rs  service.rs  store.rs  transcript.rs
src/modules/: dreaming.rs  insight_digest.rs  introspection.rs  intuition.rs  metacog.rs  mod.rs  prospective.rs  user_settings.rs
tests/: cli.rs
tools/menubar/: _precompact-checkpoint.claude.md  build.sh  i-dream-bar  i-dream-bar.swift
